testsuite/tests/polykinds/T7151.stderr

T7151.hs:3:12: error: [GHC-68567]
    Illegal type: ‘[Int, String]’
    Suggested fix:
      Perhaps you intended to use DataKinds (implied by TypeInType and UnliftedDatatypes)
